// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/App mapStateToProps 1`] = `
Object {
  "drawerOpen": true,
  "loading": false,
  "snackbar": undefined,
  "toolbar": true,
  "user": Object {},
}
`;

exports[`components/App render 1`] = `
<div
  data-jsx={3792736204}
>
  <div
    className="hide"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#00bcd4",
        "borderRadius": "0px",
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "flex",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "paddingLeft": 24,
        "paddingRight": 24,
        "position": "fixed",
        "top": 0,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "width": "100%",
        "zIndex": 1101,
      }
    }
  >
    <button
      disabled={false}
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOut={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "background": "none",
          "border": 10,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": 0,
          "fontWeight": "inherit",
          "height": 48,
          "margin": 0,
          "marginLeft": -16,
          "marginRight": 8,
          "marginTop": 8,
          "muiPrepared": true,
          "outline": "none",
          "overflow": "visible",
          "padding": 12,
          "position": "relative",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": 48,
          "zIndex": 1,
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <svg
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "#ffffff",
              "display": "inline-block",
              "fill": "#ffffff",
              "height": 24,
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
              "width": 24,
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
    </button>
    <h1
      onTouchTap={[Function]}
      style={
        Object {
          "boxFlex": 1,
          "color": "#ffffff",
          "cursor": "pointer",
          "flex": "1",
          "fontSize": 24,
          "fontWeight": 400,
          "height": 64,
          "letterSpacing": 0,
          "lineHeight": "64px",
          "margin": 0,
          "muiPrepared": true,
          "overflow": "hidden",
          "paddingTop": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      
    </h1>
    <div
      style={
        Object {
          "marginLeft": "auto",
          "marginRight": -16,
          "marginTop": 8,
          "muiPrepared": true,
        }
      }
    >
      <div
        className={undefined}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "display": "inline-block",
            "muiPrepared": true,
            "position": "relative",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "background": "none",
              "border": 10,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": 0,
              "fontWeight": "inherit",
              "height": 48,
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "overflow": "visible",
              "padding": 12,
              "position": "relative",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": 48,
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <svg
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fill": "#ffffff",
                  "height": 24,
                  "muiPrepared": true,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "userSelect": "none",
                  "width": 24,
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </div>
        </button>
        <div
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className={undefined}
    style={undefined}
  >
    <div
      className={undefined}
      onTouchTap={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "rgba(0, 0, 0, 0.54)",
          "height": "100%",
          "left": "-100%",
          "muiPrepared": true,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "fixed",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "left 0ms cubic-bezier(0.23, 1, 0.32, 1) 400ms, opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": "100%",
          "willChange": "opacity",
          "zIndex": 1200,
        }
      }
    />
    <div
      className={undefined}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#ffffff",
          "borderRadius": "0px",
          "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                 0 3px 10px rgba(0, 0, 0, 0.23)",
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "height": "100%",
          "left": 0,
          "muiPrepared": true,
          "overflow": "auto",
          "position": "fixed",
          "top": 0,
          "transform": "translate(-266px, 0)",
          "transition": "transform 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 256,
          "zIndex": 1300,
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#00bcd4",
            "color": "rgba(255, 255, 255, 1)",
            "cursor": "pointer",
            "fontSize": 16,
            "fontWeight": 300,
            "lineHeight": "64px",
            "marginBottom": 8,
            "paddingLeft": 24,
          }
        }
      >
        v
        
        
      </div>
      <div>
        <div
          onTouchEnd={[Function]}
          open={null}
          role="menuitem"
          style={
            Object {
              "backgroundColor": null,
              "color": "rgba(0, 0, 0, 0.3)",
              "cursor": "default",
              "display": "block",
              "fontSize": 16,
              "lineHeight": "48px",
              "marginLeft": 0,
              "minHeight": "48px",
              "muiPrepared": true,
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "position": "relative",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "whiteSpace": "nowrap",
            }
          }
        >
          user@email.com
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
    data-jsx={3792736204}
  />
  <div
    open={false}
    style={
      Object {
        "bottom": 0,
        "display": "flex",
        "left": "50%",
        "muiPrepared": true,
        "position": "fixed",
        "transform": "translate(-50%, 48px)",
        "transition": "transform 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, visibility 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "visibility": "hidden",
        "zIndex": 2900,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.87)",
          "borderRadius": 2,
          "flexGrow": 0,
          "fontFamily": "Roboto, sans-serif",
          "height": 48,
          "lineHeight": "48px",
          "maxWidth": 568,
          "minWidth": 288,
          "muiPrepared": true,
          "padding": "0 24px",
          "width": "auto",
        }
      }
      width={3}
    >
      <div
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "muiPrepared": true,
            "opacity": 0,
            "transition": "opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <span>
          
        </span>
      </div>
    </div>
  </div>
  <br
    data-jsx={3792736204}
  />
</div>
`;

exports[`components/App render children 1`] = `
<div
  data-jsx={3792736204}
>
  <div
    className="hide"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#00bcd4",
        "borderRadius": "0px",
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "flex",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "paddingLeft": 24,
        "paddingRight": 24,
        "position": "fixed",
        "top": 0,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "width": "100%",
        "zIndex": 1101,
      }
    }
  >
    <button
      disabled={false}
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOut={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "background": "none",
          "border": 10,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": 0,
          "fontWeight": "inherit",
          "height": 48,
          "margin": 0,
          "marginLeft": -16,
          "marginRight": 8,
          "marginTop": 8,
          "muiPrepared": true,
          "outline": "none",
          "overflow": "visible",
          "padding": 12,
          "position": "relative",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": 48,
          "zIndex": 1,
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <svg
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "#ffffff",
              "display": "inline-block",
              "fill": "#ffffff",
              "height": 24,
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
              "width": 24,
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
    </button>
    <h1
      onTouchTap={[Function]}
      style={
        Object {
          "boxFlex": 1,
          "color": "#ffffff",
          "cursor": "pointer",
          "flex": "1",
          "fontSize": 24,
          "fontWeight": 400,
          "height": 64,
          "letterSpacing": 0,
          "lineHeight": "64px",
          "margin": 0,
          "muiPrepared": true,
          "overflow": "hidden",
          "paddingTop": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      
    </h1>
    <div
      style={
        Object {
          "marginLeft": "auto",
          "marginRight": -16,
          "marginTop": 8,
          "muiPrepared": true,
        }
      }
    >
      <div
        className={undefined}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "display": "inline-block",
            "muiPrepared": true,
            "position": "relative",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "background": "none",
              "border": 10,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": 0,
              "fontWeight": "inherit",
              "height": 48,
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "overflow": "visible",
              "padding": 12,
              "position": "relative",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": 48,
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <svg
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fill": "#ffffff",
                  "height": 24,
                  "muiPrepared": true,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "userSelect": "none",
                  "width": 24,
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </div>
        </button>
        <div
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className={undefined}
    style={undefined}
  >
    <div
      className={undefined}
      onTouchTap={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "rgba(0, 0, 0, 0.54)",
          "height": "100%",
          "left": "-100%",
          "muiPrepared": true,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "fixed",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "left 0ms cubic-bezier(0.23, 1, 0.32, 1) 400ms, opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": "100%",
          "willChange": "opacity",
          "zIndex": 1200,
        }
      }
    />
    <div
      className={undefined}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#ffffff",
          "borderRadius": "0px",
          "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                 0 3px 10px rgba(0, 0, 0, 0.23)",
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "height": "100%",
          "left": 0,
          "muiPrepared": true,
          "overflow": "auto",
          "position": "fixed",
          "top": 0,
          "transform": "translate(-266px, 0)",
          "transition": "transform 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 256,
          "zIndex": 1300,
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#00bcd4",
            "color": "rgba(255, 255, 255, 1)",
            "cursor": "pointer",
            "fontSize": 16,
            "fontWeight": 300,
            "lineHeight": "64px",
            "marginBottom": 8,
            "paddingLeft": 24,
          }
        }
      >
        v
        
        
      </div>
      <div>
        <div
          onTouchEnd={[Function]}
          open={null}
          role="menuitem"
          style={
            Object {
              "backgroundColor": null,
              "color": "rgba(0, 0, 0, 0.3)",
              "cursor": "default",
              "display": "block",
              "fontSize": 16,
              "lineHeight": "48px",
              "marginLeft": 0,
              "minHeight": "48px",
              "muiPrepared": true,
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "position": "relative",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "whiteSpace": "nowrap",
            }
          }
        >
          user@email.com
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
    data-jsx={3792736204}
  >
    <div
      className="children"
    />
  </div>
  <div
    open={false}
    style={
      Object {
        "bottom": 0,
        "display": "flex",
        "left": "50%",
        "muiPrepared": true,
        "position": "fixed",
        "transform": "translate(-50%, 48px)",
        "transition": "transform 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, visibility 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "visibility": "hidden",
        "zIndex": 2900,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.87)",
          "borderRadius": 2,
          "flexGrow": 0,
          "fontFamily": "Roboto, sans-serif",
          "height": 48,
          "lineHeight": "48px",
          "maxWidth": 568,
          "minWidth": 288,
          "muiPrepared": true,
          "padding": "0 24px",
          "width": "auto",
        }
      }
      width={3}
    >
      <div
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "muiPrepared": true,
            "opacity": 0,
            "transition": "opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <span>
          
        </span>
      </div>
    </div>
  </div>
  <br
    data-jsx={3792736204}
  />
</div>
`;

exports[`components/App render children with no user 1`] = `
<div
  data-jsx={3792736204}
>
  <div
    className="hide"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#00bcd4",
        "borderRadius": "0px",
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "flex",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "paddingLeft": 24,
        "paddingRight": 24,
        "position": "fixed",
        "top": 0,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "width": "100%",
        "zIndex": 1101,
      }
    }
  >
    <button
      disabled={false}
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOut={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "background": "none",
          "border": 10,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": 0,
          "fontWeight": "inherit",
          "height": 48,
          "margin": 0,
          "marginLeft": -16,
          "marginRight": 8,
          "marginTop": 8,
          "muiPrepared": true,
          "outline": "none",
          "overflow": "visible",
          "padding": 12,
          "position": "relative",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": 48,
          "zIndex": 1,
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <svg
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "#ffffff",
              "display": "inline-block",
              "fill": "#ffffff",
              "height": 24,
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
              "width": 24,
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
    </button>
    <h1
      onTouchTap={[Function]}
      style={
        Object {
          "boxFlex": 1,
          "color": "#ffffff",
          "cursor": "pointer",
          "flex": "1",
          "fontSize": 24,
          "fontWeight": 400,
          "height": 64,
          "letterSpacing": 0,
          "lineHeight": "64px",
          "margin": 0,
          "muiPrepared": true,
          "overflow": "hidden",
          "paddingTop": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      
    </h1>
    <div
      style={
        Object {
          "marginLeft": "auto",
          "marginRight": -16,
          "marginTop": 8,
          "muiPrepared": true,
        }
      }
    >
      <div
        className={undefined}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "display": "inline-block",
            "muiPrepared": true,
            "position": "relative",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "background": "none",
              "border": 10,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": 0,
              "fontWeight": "inherit",
              "height": 48,
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "overflow": "visible",
              "padding": 12,
              "position": "relative",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": 48,
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <svg
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fill": "#ffffff",
                  "height": 24,
                  "muiPrepared": true,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "userSelect": "none",
                  "width": 24,
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </div>
        </button>
        <div
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className={undefined}
    style={undefined}
  >
    <div
      className={undefined}
      onTouchTap={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "rgba(0, 0, 0, 0.54)",
          "height": "100%",
          "left": "-100%",
          "muiPrepared": true,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "fixed",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "left 0ms cubic-bezier(0.23, 1, 0.32, 1) 400ms, opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": "100%",
          "willChange": "opacity",
          "zIndex": 1200,
        }
      }
    />
    <div
      className={undefined}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#ffffff",
          "borderRadius": "0px",
          "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                 0 3px 10px rgba(0, 0, 0, 0.23)",
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "height": "100%",
          "left": 0,
          "muiPrepared": true,
          "overflow": "auto",
          "position": "fixed",
          "top": 0,
          "transform": "translate(-266px, 0)",
          "transition": "transform 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 256,
          "zIndex": 1300,
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#00bcd4",
            "color": "rgba(255, 255, 255, 1)",
            "cursor": "pointer",
            "fontSize": 16,
            "fontWeight": 300,
            "lineHeight": "64px",
            "marginBottom": 8,
            "paddingLeft": 24,
          }
        }
      >
        v
        
        
      </div>
      <div>
        <div
          onTouchEnd={[Function]}
          open={null}
          role="menuitem"
          style={
            Object {
              "backgroundColor": null,
              "color": "rgba(0, 0, 0, 0.3)",
              "cursor": "default",
              "display": "block",
              "fontSize": 16,
              "lineHeight": "48px",
              "marginLeft": 0,
              "minHeight": "48px",
              "muiPrepared": true,
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "position": "relative",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "whiteSpace": "nowrap",
            }
          }
        >
          user@email.com
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
    data-jsx={3792736204}
  >
    <div
      className="children"
    />
  </div>
  <div
    open={false}
    style={
      Object {
        "bottom": 0,
        "display": "flex",
        "left": "50%",
        "muiPrepared": true,
        "position": "fixed",
        "transform": "translate(-50%, 48px)",
        "transition": "transform 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, visibility 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "visibility": "hidden",
        "zIndex": 2900,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.87)",
          "borderRadius": 2,
          "flexGrow": 0,
          "fontFamily": "Roboto, sans-serif",
          "height": 48,
          "lineHeight": "48px",
          "maxWidth": 568,
          "minWidth": 288,
          "muiPrepared": true,
          "padding": "0 24px",
          "width": "auto",
        }
      }
      width={3}
    >
      <div
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "muiPrepared": true,
            "opacity": 0,
            "transition": "opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <span>
          
        </span>
      </div>
    </div>
  </div>
  <br
    data-jsx={3792736204}
  />
</div>
`;

exports[`components/App render loading progress 1`] = `
<div
  data-jsx={3792736204}
>
  <div
    className="hide"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#00bcd4",
        "borderRadius": "0px",
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "flex",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "paddingLeft": 24,
        "paddingRight": 24,
        "position": "fixed",
        "top": 0,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "width": "100%",
        "zIndex": 1101,
      }
    }
  >
    <button
      disabled={false}
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOut={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "background": "none",
          "border": 10,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": 0,
          "fontWeight": "inherit",
          "height": 48,
          "margin": 0,
          "marginLeft": -16,
          "marginRight": 8,
          "marginTop": 8,
          "muiPrepared": true,
          "outline": "none",
          "overflow": "visible",
          "padding": 12,
          "position": "relative",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": 48,
          "zIndex": 1,
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <svg
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "#ffffff",
              "display": "inline-block",
              "fill": "#ffffff",
              "height": 24,
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
              "width": 24,
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
    </button>
    <h1
      onTouchTap={[Function]}
      style={
        Object {
          "boxFlex": 1,
          "color": "#ffffff",
          "cursor": "pointer",
          "flex": "1",
          "fontSize": 24,
          "fontWeight": 400,
          "height": 64,
          "letterSpacing": 0,
          "lineHeight": "64px",
          "margin": 0,
          "muiPrepared": true,
          "overflow": "hidden",
          "paddingTop": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      
    </h1>
    <div
      style={
        Object {
          "marginLeft": "auto",
          "marginRight": -16,
          "marginTop": 8,
          "muiPrepared": true,
        }
      }
    >
      <div
        className={undefined}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "display": "inline-block",
            "muiPrepared": true,
            "position": "relative",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "background": "none",
              "border": 10,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": 0,
              "fontWeight": "inherit",
              "height": 48,
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "overflow": "visible",
              "padding": 12,
              "position": "relative",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": 48,
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <svg
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fill": "#ffffff",
                  "height": 24,
                  "muiPrepared": true,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "userSelect": "none",
                  "width": 24,
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </div>
        </button>
        <div
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="progress"
    data-jsx={106523559}
    style={
      Object {
        "top": 0,
      }
    }
  >
    <div>
      {
        "mode": "indeterminate"
      }
    </div>
  </div>
  <div
    className={undefined}
    style={undefined}
  >
    <div
      className={undefined}
      onTouchTap={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "rgba(0, 0, 0, 0.54)",
          "height": "100%",
          "left": "-100%",
          "muiPrepared": true,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "fixed",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "left 0ms cubic-bezier(0.23, 1, 0.32, 1) 400ms, opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": "100%",
          "willChange": "opacity",
          "zIndex": 1200,
        }
      }
    />
    <div
      className={undefined}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#ffffff",
          "borderRadius": "0px",
          "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                 0 3px 10px rgba(0, 0, 0, 0.23)",
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "height": "100%",
          "left": 0,
          "muiPrepared": true,
          "overflow": "auto",
          "position": "fixed",
          "top": 0,
          "transform": "translate(-266px, 0)",
          "transition": "transform 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 256,
          "zIndex": 1300,
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#00bcd4",
            "color": "rgba(255, 255, 255, 1)",
            "cursor": "pointer",
            "fontSize": 16,
            "fontWeight": 300,
            "lineHeight": "64px",
            "marginBottom": 8,
            "paddingLeft": 24,
          }
        }
      >
        v
        
        
      </div>
      <div>
        <div
          onTouchEnd={[Function]}
          open={null}
          role="menuitem"
          style={
            Object {
              "backgroundColor": null,
              "color": "rgba(0, 0, 0, 0.3)",
              "cursor": "default",
              "display": "block",
              "fontSize": 16,
              "lineHeight": "48px",
              "marginLeft": 0,
              "minHeight": "48px",
              "muiPrepared": true,
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "position": "relative",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "whiteSpace": "nowrap",
            }
          }
        >
          user@email.com
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
    data-jsx={3792736204}
  />
  <div
    open={false}
    style={
      Object {
        "bottom": 0,
        "display": "flex",
        "left": "50%",
        "muiPrepared": true,
        "position": "fixed",
        "transform": "translate(-50%, 48px)",
        "transition": "transform 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, visibility 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "visibility": "hidden",
        "zIndex": 2900,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.87)",
          "borderRadius": 2,
          "flexGrow": 0,
          "fontFamily": "Roboto, sans-serif",
          "height": 48,
          "lineHeight": "48px",
          "maxWidth": 568,
          "minWidth": 288,
          "muiPrepared": true,
          "padding": "0 24px",
          "width": "auto",
        }
      }
      width={3}
    >
      <div
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "muiPrepared": true,
            "opacity": 0,
            "transition": "opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <span>
          
        </span>
      </div>
    </div>
  </div>
  <br
    data-jsx={3792736204}
  />
</div>
`;
